Fix mobile parallax background images not displaying
Fixed parallax backgrounds not showing on mobile devices:
- Moved background styles from inline to SCSS module
- Set background-attachment to 'scroll' on mobile (default)
- Keep background-attachment 'fixed' on desktop (@media md and above)
- Fixed parallax works on desktop, scroll works on mobile

Mobile devices now properly display all parallax background images.

--- a/components/ParallaxSection.module.scss
+++ b/components/ParallaxSection.module.scss
@@ -7,6 +7,14 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+
+  @include md {
+    background-attachment: fixed;
+  }
 }
 
 .overlay {
